Files final project (09/04/2018)

--- a/error.html
+++ b/error.html
@@ -2,10 +2,15 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Error server</title>
+    <title>Error </title>
   </head>
-  <body style="background-color:Crimson;">
-    <h1>Error!!</h1>
-    <p>Sorry an error was registered :-(</p>
+  <body style="background-color:Crimson">
+    <h1 style="color:maroon; text-align:center;font-family:arial; font-size:300%">Error!!</h1>
+    <h3 style="text-align:Center">Error in path was registered</h3>
+
+      <fieldset>
+  <legend style="color: darkred">Try the following path</legend>
+   <a style=" color:lightcoral" href="/">Main page</a>
+</fieldset>
   </body>
 </html>
