--- a/chromosomelength.html
+++ b/chromosomelength.html
@@ -2,14 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Information</title>
+
+<title>Chromosome length</title>
 </head>
-<body style="background-color: Aliceblue">
-  <h1>{}</h1>
+<body style="background-color: plum">
+  <h1 style="color:darkmagenta;font-family:arial;font-size:200%;text-align:center">Chromosome Length</h1>
+  <h2 style="color:darkmagenta;font-family:arial;font-size:100%;text-align:center">Displaying information for the selected chromosome</h2>
+
+  <fieldset>
+  <legend style="color:indigo;font-family:arial;font-size:100%">{}</legend>
+   <p style = "text-align: center" >{}</p>
+</fieldset>
 
 
 
-  <a href="/">Main page</a>
+
+  <a style=" color:mediumorchid" href="/">Main page</a>
 
 </body>
 </html>
