--- a/karyotype.html
+++ b/karyotype.html
@@ -2,14 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Information</title>
+
+
+
+<title>Karyotype</title>
 </head>
-<body style="background-color: Aliceblue">
-  <h1>{}</h1>
-  <h2>{}</h2>
+<body style="background-color: palegreen">
+  <h1 style="color:seagreen;font-family:arial;font-size:200%;text-align:center">KARYOTYPE</h1>
+  <h2 style="color:seagreen;font-family:arial;font-size:100%;text-align:center">{}</h2>
+
+  <fieldset>
+  <legend style="color:limegreen;font-family:arial;font-size:100%">Chromosome's info</legend>
+   <p >{}</p>
+</fieldset>
 
 
-  <a href="/">Main page</a>
+
+
+  <a style=" color:springgreen" href="/">Main page</a>
 
 </body>
 </html>
