--- a/listSpecies.html
+++ b/listSpecies.html
@@ -2,14 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Information</title>
+    <title>Species list</title>
 </head>
 <body style="background-color: mistyrose">
-  <h1>{}</h1>
-  <h2>{}</h2>
+  <h1 style="color:deeppink;font-family:arial;font-size:200%;text-align:center">Species list</h1>
+  <h2 style="color:deeppink;font-family:arial;font-size:100%;text-align:center">{}</h2>
+
+  <fieldset>
+  <legend style="color:hotpink;font-family:arial;font-size:100%">Species common name</legend>
+   <p >{}</p>
+</fieldset>
 
 
-  <a href="/">Main page</a>
+
+
+  <a style=" color:#99004C" href="/">Main page</a>
 
 </body>
 </html>
